--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@ if (location.hash === '#apps') {
 			<div class="columns is-vcentered">
 				<div class="column is-two-thirds is-centered has-nice-link">
 					<div itemscope itemtype="https://schema.org/Person">
-						<img id="profile-pic" src="sindre-sorhus-small.jpg" width="160" height="160" itemprop="image">
-						<h1 class="title is-2" itemprop="name">Sindre Sorhus</h1>
+						<img id="profile-pic" src="ben.jpg" width="160" height="160" itemprop="image">
+						<h1 class="title is-2" itemprop="name">Abdullah Mertoğlu</h1>
 						<h2 class="subtitle is-4" itemprop="description">Full-Time Open-Sourcerer &amp; Aspiring Rebel</h2>
 						<p>I make lots of modules, CLI tools, and apps. Mostly Swift &amp; Node.js.</p>
 					</div>
@@ -29,13 +29,13 @@ if (location.hash === '#apps') {
 							</span>
 							<span>Words</span>
 						</a>
-						<a class="button is-large is-white" href="https://github.com/sindresorhus">
+						<a class="button is-large is-white" href="https://github.com/uiframer">
 							<span class="icon">
 								<i class="fa fa-github"></i>
 							</span>
 							<span>Code</span>
 						</a>
-						<a class="button is-large is-white" href="https://twitter.com/sindresorhus">
+						<a class="button is-large is-white" href="https://twitter.com/afarcodes">
 							<span class="icon">
 								<i class="fa fa-twitter"></i>
 							</span>
